<resources>
    <string name="app_name">Loft MoneyTracker</string>
    <string name="name_hint">Название</string>
    <string name="price_hint">0</string>
    <string name="rub_sign">₽</string>

    <string name="expenses">РАСХОДЫ</string>
    <string name="incomes">ДОХОДЫ</string>
    <string name="balance">БАЛАНС</string>
    <string name="error">Произошла ошибка</string>
    <string name="new_item">Новая запись</string>
    <string name="confirm_remove">Удалить выделенные элементы?</string>

    <array name="main_pager_titles">
        <item>@string/expenses</item>
        <item>@string/incomes</item>
        <item>@string/balance</item>
    </array>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="auth_text">Ваш незаменимый помощник в управлении бюджетом</string>
    <string name="your_balance">ваш баланс</string>
    <string name="expense">расход</string>
    <string name="income">доход</string>
    <string name="price">%1$d \u20bd</string>
    <string name="loading_error">Произошла ошибка загрузки</string>
    <string name="auth_error">Произошла ошибка авторизации</string>


</resources>
