<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern"
    tools:context="com.example.mitya.loftmoneytracker.AddActivity">

    <android.support.v7.widget.CardView
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/margin_l"
        android:paddingRight="@dimen/margin_l"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:elevation="@dimen/margin_m"
        android:layout_height="68dp">

        <EditText
            android:id="@+id/name"
            android:maxLines="1"
            android:inputType="text"
            android:layout_weight="1"
            android:hint="@string/name_hint"
            android:background="@null"
            android:maxLength="50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/price"
            android:background="@null"
            android:inputType="number"
            android:hint="@string/price_hint"
            android:maxLength="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/rub_sign"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/add"
            android:text="+"
            android:textSize="44sp"
            android:enabled="false"
            android:paddingStart="@dimen/margin_l"
            android:paddingEnd="@dimen/margin_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

    </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
