<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_pattern"
    tools:context="com.example.mitya.loftmoneytracker.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:elevation="5dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/name"
            android:maxLines="1"
            android:inputType="text"
            android:layout_weight="1"
            android:hint="@string/name_hint"
            android:background="@android:color/transparent"
            android:maxLength="50"
            android:imeOptions="actionNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/price"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:hint="@string/price_hint"
                android:maxLength="5"
                android:imeOptions="actionDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/rub_sign"
        android:layout_height="wrap_content" />

        </LinearLayout>


        <TextView
            android:id="@+id/add"
            android:text="+"
            android:textSize="44sp"
            android:enabled="false"
            android:paddingStart="@dimen/margin_L"
            android:paddingEnd="@dimen/margin_L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

    </LinearLayout>


</FrameLayout>
